# Grafica

./: .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg.json
CMakeProject1/: CMakeLists.txt  Camera.cpp  Camera.hpp  GPSLab1.cpp  GravityObject.ixx  Model3D.cpp  Model3D.hpp  Object.cpp  Object.h  Shader.cpp  Shader.hpp  Window.cpp  Window.h  main.cpp
shaders/: shader.frag  shader.vert
