    cmake_minimum_required (VERSION 3.8)
    add_executable (CMakeProject1 "main.cpp" "GPSLab1.cpp""GPSLab1.hpp" "Shader.cpp" "Camera.cpp" "stb_image.cpp" "tiny_obj_loader.cpp" "Mesh.cpp" "Model3D.cpp""Window.cpp""Window.h")
find_package(glm CONFIG REQUIRED)
    target_link_libraries(CMakeProject1 PRIVATE glm::glm)
find_package(GLEW REQUIRED)
    target_link_libraries(CMakeProject1 PRIVATE GLEW::GLEW)
find_package(glfw3 CONFIG REQUIRED)
    target_link_libraries(CMakeProject1 PRIVATE glfw)
if (CMAKE_VERSION VERSION_GREATER 3.12)
    set_property(TARGET CMakeProject1 PROPERTY CXX_STANDARD 20)
endif()